--- a/models/demo/demo.yml
+++ b/models/demo/demo.yml
@@ -2,6 +2,12 @@ version: 2
 
 
 models:
+  - name: my_first_dbt_model
+    columns:
+      - name: id
+        tests:
+          - not_null:
+              severity: warn
   - name: employee
     description: "DBT Model for employee table"
     columns:
@@ -31,6 +37,8 @@ models:
   - name: final_order
     description: "DBT Model for the final orders"
   - name: session
+  - name: concat_name
+  - name: concat_address
 
    
 sources:
